register and sign in apis and util fns

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123@localhost:5432/task-manager?schema=public"
+JWT_SECRET="my_secret-shhh"
+COOKIE_NAME="_my_nextjs_cookie_"
