db deploy and migration instructions for deployment

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# when deploying to prod change below env var to point to prod then run `npx prisma migrate deploy`
+# As railway DB knows nothing about the schema.This will run all the migrations on the DB.
+# This should be tied into a workflow on the PR not from any local system.
 DATABASE_URL="postgresql://postgres:123@localhost:5432/task-manager?schema=public"
 JWT_SECRET="my_secret-shhh"
 COOKIE_NAME="_my_nextjs_cookie_"
